--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{'/assets/css/navigation_style.css'}}"
 
 {% seo %}
   </head>
@@ -28,6 +29,7 @@
 
     <div class="container">
       <section id="main_content">
+        {% include navigation.html %}
         {{ content }}
       </section>
     </div>
